# clionGitTest3

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
include/: testClass.h
src/: testClass.cpp
